internal/gatewayapi/testdata/httproute-with-tls-and-http.in.yaml
gateways:
  - apiVersion: gateway.networking.k8s.io/v1
    kind: Gateway
    metadata:
      namespace: envoy-gateway
      name: gateway-1
    spec:
      gatewayClassName: envoy-gateway-class
      listeners:
        - name: http
          protocol: HTTP
          port: 80
          allowedRoutes:
            namespaces:
              from: All
httpRoutes:
  - apiVersion: gateway.networking.k8s.io/v1
    kind: HTTPRoute
    metadata:
      namespace: default
      name: httproute-1
    spec:
      parentRefs:
        - namespace: envoy-gateway
          name: gateway-1
      rules:
        - matches:
            - path:
                value: "/"
          backendRefs:
            - group: gateway.envoyproxy.io
              kind: Backend
              name: backend-1
            - name: service-1
              port: 8080
configMaps:
  - apiVersion: v1
    kind: ConfigMap
    metadata:
      name: ca-cmap
      namespace: default
    data:
      ca.crt: |
        -----BEGIN CERTIFICATE-----
        MIIDJzCCAg+gAwIBAgIUAl6UKIuKmzte81cllz5PfdN2IlIwDQYJKoZIhvcNAQEL
[...]
        -----END CERTIFICATE-----
backendTLSPolicies:
  - apiVersion: gateway.networking.k8s.io/v1alpha2
    kind: BackendTLSPolicy
    metadata:
      name: policy-btls-for-backend-1
      namespace: default
    spec:
      targetRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: backend-1
      validation:
        wellKnownCACertificates: System
        hostname: example.com
        subjectAltNames:
          - type: URI
            uri: spiffe://cluster.local/ns/istio-demo/sa/echo-v1
          - type: Hostname
            hostname: subdomain.secondexample.com
backends:
  - apiVersion: gateway.envoyproxy.io/v1alpha1
    kind: Backend
    metadata:
      name: backend-1
      namespace: default
    spec:
      # the BackendTLSPolicy should override the one from Backend
      # the generated ir tls settings should contain the tls settings from Backend, BackendTLSPolicy and EnvoyProxy
      tls:
        caCertificateRefs:
          - name: ca-cmap
            group: ""
            kind: ConfigMap
      endpoints:
        - ip:
            address: 1.1.1.1
            port: 3001
